fixed layout,aligned items

--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 50px;
-    min-width: 400px;
+    min-width: 445px;
     width: 800px;
-    height: 1000px;
+    min-height: 1000px;
 }
 
 .imgDiv{
@@ -44,7 +44,8 @@ img{
     background-color: rgb(159, 95, 159, .5);
     border-radius: 12px;
     padding: 18px;
-    width: 420px;
+    min-width: 415px;
+    max-width: 480px;
 }
 
 p{
@@ -60,13 +61,11 @@ p{
     background-color: rgb(159, 95, 159, .5);
     border-radius: 12px;
     padding: 18px;
-    width: 420px;
+    min-width: 415px;
+    max-width: 480px;
+    height: 100%;
 
     /* text-align: center; */
-}
-
-form{
-
 }
 
 label{
@@ -84,7 +83,6 @@ br{
     display: block; /* makes it have a width */
     content: ""; /* clears default height */
 }
-
 
 input{
     /* align-self: flex-end; */
@@ -121,4 +119,20 @@ input{
     /* display: table; */
     margin-left: 30px;
     margin-right: 30px;
+}
+
+#submitBtn{
+    /* width: 20px; */
+    /* text-align: center;
+    float: left;
+    position: relative;
+    left: -27%;
+    /* float: right; */
+    /* display: table; */
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 40px; 
+    border-radius: 8px;
+    padding: 10px;
+    width: 120px;
 }
